# A_Smiling_Nightmare

./: CMakeLists.txt  Credits.txt  Font credit.txt  LICENSE  Main.cpp  README.md
cmake_modules/: SDL2-config.cmake
fonts/: readme.txt
game/: Entity.cpp  Entity.h  Game_handler.cpp  Game_handler.h  General.cpp  General.h  Map.cpp  Map.h
